# backend/api/restapi/requests.go
@@ -6,6 +6,11 @@ type RegisterRequest struct {
 	Password string `json:"password" binding:"required,min=6"`
 }
 
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
+
 type CreateQuizRequest struct {
 	Name string `json:"name" binding:"required"`
 }
